feat: add links to header and footer. Add gifts.html with empty container inside.

--- a/christmas-shop/index.html
+++ b/christmas-shop/index.html
@@ -17,9 +17,9 @@
         <nav class="main-nav">
             <input type="checkbox" id="menu-toggle">
             <ul class="menu">
-                <li><a href="#" class="action-small">Gifts</a></li>
-                <li><a href="#" class="action-small">About</a></li>
-                <li><a href="#" class="action-small">Best</a></li>
+                <li><a href="gifts.html" class="action-small">Gifts</a></li>
+                <li><a href="#about-section" class="action-small">About</a></li>
+                <li><a href="#best-gifts-section" class="action-small">Best</a></li>
                 <li><a href="#footer" class="action-small">Contacts</a></li>
             </ul>
             <label for="menu-toggle" class="hamburger">
@@ -156,27 +156,27 @@
     <footer id="footer">
         <div class="footer-container">
             <div class="footer-cards">
-                <div class="footer-card">
+                <a href="tel:+375291112233" class="footer-card">
                     <div class="footer-card-img"></div>
                     <div class="footer-card-text">
                         <span class="action-large">+375 (29) 111-22-33</span>
                         <h3>Call us</h3>
                     </div>
-                </div>
-                <div class="footer-card">
+                </a>
+                <a href="https://maps.app.goo.gl/yqNieH2CbtmBQvU17" target="_blank" class="footer-card">
                     <div class="footer-card-img"></div>
                     <div class="footer-card-text">
                         <span class="action-large">magic forest</span>
                         <h3>Meet us</h3>
                     </div>
-                </div>
-                <div class="footer-card">
+                </a>
+                <a href="mailto:gifts@magic.com" class="footer-card">
                     <div class="footer-card-img"></div>
                     <div class="footer-card-text">
                         <span class="action-large">gifts@magic.com</span>
                         <h3>write us</h3>
                     </div>
-                </div>
+                </a>
             </div>
             <div class="footer-text">
                 <div class="socials-container">
@@ -186,7 +186,7 @@
                     <i class="fa-brands fa-x-twitter fa-xl" style="color: #181c29;"></i>
                 </div>
                 <span class="paragraph">&copy; Copyright 2025, All rights reserved</span>
-                <span class="caption">Made in Rolling Scopes School</span>
+                <a href="https://rs.school/" target="_blank" class="caption">Made in Rolling Scopes School</a>
             </div>
         </div>
         <!-- <a href="https://www.flaticon.com/free-icons/snow" title="snow icons">Snow icons created by Freepik - Flaticon</a> -->
