feat: populate the gift page with content

--- a/christmas-shop/index.html
+++ b/christmas-shop/index.html
@@ -17,10 +17,10 @@
         <nav class="main-nav">
             <input type="checkbox" id="menu-toggle">
             <ul class="menu">
-                <li state="enabled"><a href="gifts.html" class="action-small">Gifts</a></li>
-                <li state="enabled"><a href="#about-section" class="action-small">About</a></li>
-                <li state="enabled"><a href="#best-gifts-section" class="action-small">Best</a></li>
-                <li state="enabled"><a href="#footer" class="action-small">Contacts</a></li>
+                <li data-state="enabled"><a href="gifts.html" class="action-small">Gifts</a></li>
+                <li data-state="enabled"><a href="#about-section" class="action-small">About</a></li>
+                <li data-state="enabled"><a href="#best-gifts-section" class="action-small">Best</a></li>
+                <li data-state="enabled"><a href="#footer" class="action-small">Contacts</a></li>
             </ul>
             <label for="menu-toggle" class="hamburger">
                 <span class="line"></span>
@@ -34,7 +34,7 @@
                 <div class="content">
                     <span class="caption text">Merry Christmas</span>
                     <h1 class="text">Gift yourself<br>the magic of new<br>possibilities</h1>
-                    <div class="button"><span class="action-small text">Explore magical gifts</span></div>
+                    <a href="gifts.html" class="button"><span class="action-small text">Explore magical gifts</span></a>
                     <span class="caption text">and Happy New Year</span>
                 </div>
             </section>
@@ -120,7 +120,7 @@
                 <div class="content">
                     <div class="items-text">
                         <h2>Ready to start your<br>journey to a better<br>version of yourself?</h2>
-                        <div class="button"><span class="action-small">Explore magical gifts</span></div>
+                        <a href="gifts.html" class="button"><span class="action-small">Explore magical gifts</span></a>
                         <span class="caption text">The New Year is Coming Soon...</span>
                         <div class="countdown">
                             <div class="countdown-item">
@@ -148,8 +148,6 @@
             </section>
         </div>
     </main>
-
-    <!-- <div class="bg-img-footer"></div> -->
     <footer id="footer">
         <div class="footer-container">
             <div class="footer-cards">
