--- a/christmas-shop/gifts.html
+++ b/christmas-shop/gifts.html
@@ -17,10 +17,10 @@
         <nav class="main-nav">
             <input type="checkbox" id="menu-toggle">
             <ul class="menu">
-                <li state="disabled"><a href="" class="action-small">Gifts</a></li>
-                <li state="enabled"><a href="#about-section" class="action-small">About</a></li>
-                <li state="enabled"><a href="#best-gifts-section" class="action-small">Best</a></li>
-                <li state="enabled"><a href="#footer" class="action-small">Contacts</a></li>
+                <li data-state="disabled"><a href="gifts.html" class="action-small">Gifts</a></li>
+                <li data-state="enabled"><a href="#about-section" class="action-small">About</a></li>
+                <li data-state="enabled"><a href="#best-gifts-section" class="action-small">Best</a></li>
+                <li data-state="enabled"><a href="#footer" class="action-small">Contacts</a></li>
             </ul>
             <label for="menu-toggle" class="hamburger">
                 <span class="line"></span>
@@ -28,11 +28,107 @@
             </label>
         </nav>
     </header>
-
-    <div class="container">
-        
-    </div>
-
+    <main>
+        <div class="main-gift-container">
+            <section class="gifts container" id="gifts-section">
+                <div class="content">
+                    <h1>Achieve health,<br>harmony,<br>and inner strength</h1>
+                    <div id="gifts-menu">
+                        <a href="#!" data-state="active" class="tab"><span class="action-small">All</span></a>
+                        <a href="#!" class="tab"><span class="action-small">For Work</span></a>
+                        <a href="#!" class="tab"><span class="action-small">For Health</span></a>
+                        <a href="#!" class="tab"><span class="action-small">For Harmony</span></a>
+                    </div>
+                    <div class="gifts-items" id="gifts-container">
+                        <div class="gift-item for-work">
+                            <div class="gift-img"></div>
+                            <div class="gift-text">
+                                <h4>for work</h4>
+                                <h3>console.log guru</h3>
+                            </div>
+                        </div>
+                        <div class="gift-item for-health">
+                            <div class="gift-img"></div>
+                            <div class="gift-text">
+                                <h4>for health</h4>
+                                <h3>step master</h3>
+                            </div>
+                        </div>
+                        <div class="gift-item for-work">
+                            <div class="gift-img"></div>
+                            <div class="gift-text">
+                                <h4>for work</h4>
+                                <h3>bug magnet</h3>
+                            </div>
+                        </div>
+                        <div class="gift-item for-work">
+                            <div class="gift-img"></div>
+                            <div class="gift-text">
+                                <h4>for work</h4>
+                                <h3>shortcut cheater</h3>
+                            </div>
+                        </div>
+                        <div class="gift-item for-health">
+                            <div class="gift-img"></div>
+                            <div class="gift-text">
+                                <h4>for health</h4>
+                                <h3>posture levitation</h3>
+                            </div>
+                        </div>
+                        <div class="gift-item for-harmony">
+                            <div class="gift-img"></div>
+                            <div class="gift-text">
+                                <h4>for harmony</h4>
+                                <h3>bug acceptance guru</h3>
+                            </div>
+                        </div>
+                        <div class="gift-item for-health">
+                            <div class="gift-img"></div>
+                            <div class="gift-text">
+                                <h4>for health</h4>
+                                <h3>snack resister</h3>
+                            </div>
+                        </div>
+                        <div class="gift-item for-harmony">
+                            <div class="gift-img"></div>
+                            <div class="gift-text">
+                                <h4>for harmony</h4>
+                                <h3>error laugher</h3>
+                            </div>
+                        </div>
+                        <div class="gift-item for-health">
+                            <div class="gift-img"></div>
+                            <div class="gift-text">
+                                <h4>for health</h4>
+                                <h3>hydration bot</h3>
+                            </div>
+                        </div>
+                        <div class="gift-item for-work">
+                            <div class="gift-img"></div>
+                            <div class="gift-text">
+                                <h4>for work</h4>
+                                <h3>merge master</h3>
+                            </div>
+                        </div>
+                        <div class="gift-item for-harmony">
+                            <div class="gift-img"></div>
+                            <div class="gift-text">
+                                <h4>for harmony</h4>
+                                <h3>joy charger</h3>
+                            </div>
+                        </div>
+                        <div class="gift-item for-harmony">
+                            <div class="gift-img"></div>
+                            <div class="gift-text">
+                                <h4>for harmony</h4>
+                                <h3>spontaneous coding philosopher</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </main>
     <footer id="footer">
         <div class="footer-container">
             <div class="footer-cards">
@@ -66,7 +162,7 @@
                     <i class="fa-brands fa-x-twitter fa-xl" style="color: #181c29;"></i>
                 </div>
                 <span class="paragraph">&copy; Copyright 2025, All rights reserved</span>
-                <a href="https://rs.school/" target="_blank" class="caption">Made in Rolling Scopes School</a>
+                <a href="https://rs.school/" target="_blank" class="caption text">Made in Rolling Scopes School</a>
             </div>
         </div>
         <!-- <a href="https://www.flaticon.com/free-icons/snow" title="snow icons">Snow icons created by Freepik - Flaticon</a> -->
