fix: various layout fixes

--- a/christmas-shop/gifts.html
+++ b/christmas-shop/gifts.html
@@ -10,29 +10,31 @@
 </head>
 <body>
     <header>
-        <a href="index.html" class="logo">
-            <img src="img/logo_512px.png" alt="logo" class="logo-img">
-            <span class="action-small">The Gifts</span>
-        </a>        
-        <nav class="main-nav">
-            <input type="checkbox" id="menu-toggle">
-            <ul class="menu">
-                <li data-state="disabled"><a href="gifts.html" class="action-small">Gifts</a></li>
-                <li data-state="enabled"><a href="#about-section" class="action-small">About</a></li>
-                <li data-state="enabled"><a href="#best-gifts-section" class="action-small">Best</a></li>
-                <li data-state="enabled"><a href="#footer" class="action-small">Contacts</a></li>
-            </ul>
-            <label for="menu-toggle" class="hamburger">
-                <span class="line"></span>
-                <span class="line"></span>
-            </label>
-        </nav>
+        <div id="header-container">
+            <a href="index.html" class="logo">
+                <img src="img/logo_512px.png" alt="logo" class="logo-img">
+                <span class="action-small">The Gifts</span>
+            </a>        
+            <nav class="main-nav">
+                <input type="checkbox" id="menu-toggle">
+                <ul class="menu">
+                    <li data-state="disabled"><a href="gifts.html" class="action-small">Gifts</a></li>
+                    <li data-state="enabled"><a href="#about-section" class="action-small">About</a></li>
+                    <li data-state="enabled"><a href="#best-gifts-section" class="action-small">Best</a></li>
+                    <li data-state="enabled"><a href="#footer" class="action-small">Contacts</a></li>
+                </ul>
+                <label for="menu-toggle" class="hamburger">
+                    <span class="line"></span>
+                    <span class="line"></span>
+                </label>
+            </nav>
+        </div>
     </header>
     <main>
         <div class="main-gift-container">
             <section class="gifts container" id="gifts-section">
                 <div class="content">
-                    <h1>Achieve health,<br>harmony,<br>and inner strength</h1>
+                    <h1>Achieve health,<br>harmony, and<br>inner strength</h1>
                     <div id="gifts-menu">
                         <a href="#!" data-state="active" class="tab"><span class="action-small">All</span></a>
                         <a href="#!" class="tab"><span class="action-small">For Work</span></a>
@@ -134,24 +136,18 @@
             <div class="footer-cards">
                 <a href="tel:+375291112233" class="footer-card">
                     <div class="footer-card-img"></div>
-                    <div class="footer-card-text">
-                        <span class="action-large">+375 (29) 111-22-33</span>
-                        <h3>Call us</h3>
-                    </div>
+                    <span class="action-large">+375 (29) 111-22-33</span>
+                    <h3>Call us</h3>
                 </a>
                 <a href="https://maps.app.goo.gl/yqNieH2CbtmBQvU17" target="_blank" class="footer-card">
                     <div class="footer-card-img"></div>
-                    <div class="footer-card-text">
-                        <span class="action-large">magic forest</span>
-                        <h3>Meet us</h3>
-                    </div>
+                    <span class="action-large">magic forest</span>
+                    <h3>Meet us</h3>
                 </a>
                 <a href="mailto:gifts@magic.com" class="footer-card">
                     <div class="footer-card-img"></div>
-                    <div class="footer-card-text">
-                        <span class="action-large">gifts@magic.com</span>
-                        <h3>write us</h3>
-                    </div>
+                    <span class="action-large">gifts@magic.com</span>
+                    <h3>write us</h3>
                 </a>
             </div>
             <div class="footer-text">
@@ -161,7 +157,7 @@
                     <i class="fa-brands fa-instagram fa-xl" style="color: #181c29;"></i>
                     <i class="fa-brands fa-x-twitter fa-xl" style="color: #181c29;"></i>
                 </div>
-                <span class="paragraph">&copy; Copyright 2025, All rights reserved</span>
+                <span class="paragraph">&copy; Copyright 2025, All Rights Reserved</span>
                 <a href="https://rs.school/" target="_blank" class="caption text">Made in Rolling Scopes School</a>
             </div>
         </div>
