fix: fix main container width

--- a/christmas-shop/index.html
+++ b/christmas-shop/index.html
@@ -31,7 +31,7 @@
         </div>
     </header>
     <main>
-        <div class="main-container">
+        <div class="main-container" id="main-container">
             <section class="hero container" id="hero-section">
                 <div class="content">
                     <span class="caption text">Merry Christmas</span>
@@ -58,7 +58,7 @@
                         <span class="caption">Become Happier!</span>
                         <h2>in the new 2025</h2>
                     </div>
-                    <div class="slider">
+                    <div class="slider" id="slider-row">
                         <div class="slider-item">
                             <span class="slider-text">live</span>
                             <img src="img/snowman.png" alt="slider item">
@@ -77,8 +77,8 @@
                         </div>
                     </div>
                     <div class="slider-controls">
-                        <div class="button-small" id="prev" data-disabled="true"><i class="fa-solid fa-arrow-left"></i></div>
-                        <div class="button-small" id="next" data-disabled="false"><i class="fa-solid fa-arrow-right"></i></div>
+                        <div class="button-small" id="prev" data-enabled="false"><i class="fa-solid fa-arrow-left"></i></div>
+                        <div class="button-small" id="next" data-enabled="true"><i class="fa-solid fa-arrow-right"></i></div>
                     </div>
                 </div>
             </section>
@@ -175,10 +175,10 @@
             </div>
             <div class="footer-text">
                 <div class="socials-container">
-                    <i class="fa-brands fa-telegram fa-xl" style="color: #181c29;"></i>
-                    <i class="fa-brands fa-facebook fa-xl" style="color: #181c29;"></i>
-                    <i class="fa-brands fa-instagram fa-xl" style="color: #181c29;"></i>
-                    <i class="fa-brands fa-x-twitter fa-xl" style="color: #181c29;"></i>
+                    <i class="fa-brands fa-telegram fa-xl"></i>
+                    <i class="fa-brands fa-facebook fa-xl"></i>
+                    <i class="fa-brands fa-instagram fa-xl"></i>
+                    <i class="fa-brands fa-x-twitter fa-xl"></i>
                 </div>
                 <span class="paragraph">&copy; Copyright 2025, All Rights Reserved</span>
                 <a href="https://rs.school/" target="_blank" class="caption text">Made in Rolling Scopes School</a>
