feat: add back to top button, separate code into 3 separate files. Some fixes.

--- a/christmas-shop/index.html
+++ b/christmas-shop/index.html
@@ -186,6 +186,7 @@
         </div>
         <!-- <a href="https://www.flaticon.com/free-icons/snow" title="snow icons">Snow icons created by Freepik - Flaticon</a> -->
     </footer>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
+    <script src="index.js" defer></script>
 </body>
 </html>
