--- a/christmas-shop/gifts.html
+++ b/christmas-shop/gifts.html
@@ -19,8 +19,8 @@
                 <input type="checkbox" id="menu-toggle">
                 <ul class="menu">
                     <li data-state="disabled"><a href="gifts.html" class="action-small">Gifts</a></li>
-                    <li data-state="enabled"><a href="#about-section" class="action-small">About</a></li>
-                    <li data-state="enabled"><a href="#best-gifts-section" class="action-small">Best</a></li>
+                    <li data-state="enabled"><a href="index.html#about-section" class="action-small">About</a></li>
+                    <li data-state="enabled"><a href="index.html#best-gifts-section" class="action-small">Best</a></li>
                     <li data-state="enabled"><a href="#footer" class="action-small">Contacts</a></li>
                 </ul>
                 <label for="menu-toggle" class="hamburger">
@@ -131,6 +131,9 @@
             </section>
         </div>
     </main>
+    <button id="back-to-top" class="back-to-top">
+        <i class="fa-solid fa-arrow-up"></i>
+    </button>
     <footer id="footer">
         <div class="footer-container">
             <div class="footer-cards">
@@ -152,10 +155,10 @@
             </div>
             <div class="footer-text">
                 <div class="socials-container">
-                    <i class="fa-brands fa-telegram fa-xl" style="color: #181c29;"></i>
-                    <i class="fa-brands fa-facebook fa-xl" style="color: #181c29;"></i>
-                    <i class="fa-brands fa-instagram fa-xl" style="color: #181c29;"></i>
-                    <i class="fa-brands fa-x-twitter fa-xl" style="color: #181c29;"></i>
+                    <i class="fa-brands fa-telegram fa-xl"></i>
+                    <i class="fa-brands fa-facebook fa-xl"></i>
+                    <i class="fa-brands fa-instagram fa-xl"></i>
+                    <i class="fa-brands fa-x-twitter fa-xl"></i>
                 </div>
                 <span class="paragraph">&copy; Copyright 2025, All Rights Reserved</span>
                 <a href="https://rs.school/" target="_blank" class="caption text">Made in Rolling Scopes School</a>
@@ -163,6 +166,7 @@
         </div>
         <!-- <a href="https://www.flaticon.com/free-icons/snow" title="snow icons">Snow icons created by Freepik - Flaticon</a> -->
     </footer>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
+    <script src="gifts.js" defer></script>
 </body>
 </html>
