--- a/christmas-shop/index.html
+++ b/christmas-shop/index.html
@@ -17,7 +17,7 @@
             </a>        
             <nav class="main-nav">
                 <input type="checkbox" id="menu-toggle">
-                <ul class="menu">
+                <ul id="nav-menu" class="menu">
                     <li data-state="enabled"><a href="gifts.html" class="action-small">Gifts</a></li>
                     <li data-state="enabled"><a href="#about-section" class="action-small">About</a></li>
                     <li data-state="enabled"><a href="#best-gifts-section" class="action-small">Best</a></li>
@@ -89,28 +89,28 @@
                         <h2>Especially for you</h2>
                     </div>
                     <div class="gifts-items">
-                        <div class="gift-item for-work">
+                        <div class="gift-item">
                             <div class="gift-img"></div>
                             <div class="gift-text">
                                 <h4>for work</h4>
                                 <h3>console.log guru</h3>
                             </div>
                         </div>
-                        <div class="gift-item for-health">
+                        <div class="gift-item">
                             <div class="gift-img"></div>
                             <div class="gift-text">
                                 <h4>for health</h4>
                                 <h3>hydration bot</h3>
                             </div>
                         </div>
-                        <div class="gift-item for-work">
+                        <div class="gift-item">
                             <div class="gift-img"></div>
                             <div class="gift-text">
                                 <h4>for work</h4>
                                 <h3>merge master</h3>
                             </div>
                         </div>
-                        <div class="gift-item for-harmony">
+                        <div class="gift-item">
                             <div class="gift-img"></div>
                             <div class="gift-text">
                                 <h4>for harmony</h4>
