--- a/christmas-shop/gifts.html
+++ b/christmas-shop/gifts.html
@@ -127,6 +127,28 @@
                             </div>
                         </div> -->
                     </div>
+                    <div id="card-modal" class="modal hidden">
+                        <div class="modal-content for-work">
+                            <div class="close-button"><i class="fa-solid fa-xmark fa-lg"></i></div>
+                            <div class="modal-image"></div>
+                            <div class="modal-text">
+                                <div class="modal-basic-info">
+                                    <h4 class="category">Category</h4>
+                                    <h3>Name</h3>
+                                    <p class="paragraph">Text</p>
+                                </div>
+                                <div class="modal-skills">
+                                    <h4>Adds superpowers to:</h4>
+                                    <ul>
+                                        <li><span class="paragraph">Live</span><span class="paragraph score">+500</span><div class="icons"><img src="img/logo_24px.png" alt="snowflake icon" class="score-icon"></div></li>
+                                        <li><span class="paragraph">Create</span><span class="paragraph score">+500</span><div class="icons"><img src="img/logo_24px.png" alt="snowflake icon" class="score-icon"></div></li>
+                                        <li><span class="paragraph">Love</span><span class="paragraph score">+200</span><div class="icons"><img src="img/logo_24px.png" alt="snowflake icon" class="score-icon"></div></li>
+                                        <li><span class="paragraph">Dream</span><span class="paragraph score">+400</span><div class="icons"><img src="img/logo_24px.png" alt="snowflake icon" class="score-icon"></div></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
         </div>
